--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Assembly-CSharp.loader.js";
+      var loaderUrl = buildUrl + "/Web.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Assembly-CSharp.data",
-        frameworkUrl: buildUrl + "/Assembly-CSharp.framework.js",
-        codeUrl: buildUrl + "/Assembly-CSharp.wasm",
+        dataUrl: buildUrl + "/Web.data",
+        frameworkUrl: buildUrl + "/Web.framework.js",
+        codeUrl: buildUrl + "/Web.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "BerdinK_LutzP",
         productName: "2025-Prospectorv3",
